# x64dbg-mcp

./: .gitignore  CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  README.md  build.bat  config.json  vcpkg.json
.github/workflows/: release.yml
docs/: README_CN.md
src/: PluginEntry.cpp
src/business/: BreakpointManager.cpp  DebugController.cpp  DebugController.h  DumpManager.cpp  DumpManager.h  MemoryManager.cpp  SymbolResolver.cpp  ThreadManager.cpp
src/communication/: ConnectionManager.cpp  HeartbeatMonitor.cpp  HeartbeatMonitor.h  MCPHttpServer.cpp  MCPHttpServer.h  TCPServer.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  JSONRPCParser.cpp  Logger.cpp  MCPPromptRegistry.cpp  MCPPromptRegistry.h  MCPResourceRegistry.cpp  MCPResourceRegistry.h  MCPToolRegistry.cpp  MCPToolRegistry.h  MethodDispatcher.cpp  PermissionChecker.cpp  PermissionChecker.h
src/handlers/: BreakpointHandler.cpp  DebugHandler.cpp  DebugHandler.h  DisassemblyHandler.cpp  DumpHandler.cpp  EventCallbackHandler.cpp  EventCallbackHandler.h  MemoryHandler.cpp  ModuleHandler.cpp  ScriptHandler.cpp  StackHandler.cpp
src/ui/: ConfigEditor.cpp  ConfigEditor.h  ConfigEditor.rc  resource.h
src/utils/: StringUtils.h
